2004-08-25  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Search edit activates search button.
	* main.c: Added default hotkeys for common actions.
	* Makefile: V 0.28

2004-08-24  Florian Boor <florian.boor@kernelconcepts.de>

	* Version 0.27 released
	* main.c: Fixed several sources of segfaults.
	* main.c: Some simplifications and minor improvements.

2004-08-16  Florian Boor <florian.boor@kernelconcepts.de>

	* Version 0.26 released
	* gpe-edit.applications: Application registry file for gpe-edit.
	* Makefile: Installation of registry file, new version.
	* Makefile: Added some translations.
	
2004-08-13  Florian Boor <florian.boor@kernelconcepts.de>

	* Version 0.25 released
	* main.c: Fixed two more nasty bugs in file save handling.

2004-08-12  Florian Boor <florian.boor@kernelconcepts.de>

	* Version 0.24 released

2004-08-11  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Asks to save a modified file if "new" is clicked.
                  Improved behaviour if a bad file name/location is chosen.

2004-06-04  Florian Boor <florian.boor@kernelconcepts.de>
	* Version 0.23 released
	* Makefile: V 0.23

2004-06-04  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: (main): Removed hardcoded toolbar style.

2004-05-02  Philip Blundell  <philb@gnu.org>

	* Version 0.22 released.

2004-05-02  Philip Blundell  <philb@gnu.org>

	* main.c (ask_save_before_exit): Remove stray 'default:' label
	causing compile error.

2004-03-07  Philip Blundell  <philb@gnu.org>

	* Makefile (clean): Also remove $(DEPS).

2003-10-19  Philip Blundell  <philb@gnu.org>

	* Makefile: Add dependencies.  Use STANDARD_CFLAGS,
	STANDARD_CPPFLAGS, STANDARD_LDFLAGS.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Version 0.20 released.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add cs.

	* main.c (open_file): Try to fix memory management problems
	relating to window title.

2003-09-12  Philip Blundell  <philb@gnu.org>
